# c-snake

./: .gitignore  CMakeLists.txt  README.md  apple.c  apple.h  array.h  game.c  game.h  main-menu.c  main-menu.h  main.c  menu.c  menu.h  player.c  player.h  point.c  point.h  scoreboard.c  scoreboard.h  snake.c  snake.h  string-util.c  string-util.h
